hphp/test/zend/bad/ext-spl/SplFixedArray_offsetExists_invalid_parameter.php
<?php
$array = new SplFixedArray(5);
$a = $array->offsetExists();
if(is_null($a)) {
	echo 'PASS';
}
?>